--- a/test.html
+++ b/test.html
@@ -1,3 +1,12 @@
-<h1> My name is Devang </h1>
-<p> Let's go to Paris</p>
-<a href="https://www.google.com"> LINK </a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page</title>
+</head>
+<body>
+	<h1> My name is Devang </h1>
+	<p> Let's go to <b>Paris</b></p>
+	<a href="https://www.google.com" target="_blank" title="Click me"> LINK </a>
+	<img src="">
+</body>
+</html>
