Added css and changed some html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
 	<title>Phineas Flynn</title>
 	<link rel="icon" href="img/phineas-favicon.png">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 <body>
 	<!-- header element -->
 	<header>
-		<img src="img/phineas.png">
+		<img src="img/avatar.jpg">
 		<h1>Phineas Flynn</h1>
 	</header>
 	<!-- main element -->
@@ -20,7 +21,7 @@
 			Phineas is portrayed as an intelligent, creative, innovative, and good-natured child. As a means to defeat boredom, he and Ferb devise outrageous activities throughout their summer vacation, often participating in activities – toy design (in "Toy to the World"); piracy (in "The Ballad of Badbeard"); engineering (in "It's About Time!"); restaurant management (in "Chez Platypus"); usually inaccessible to children. Phineas lives in the fictional town of Danville (part of the Tri-State Area), in a large, suburban neighborhood; he comes up with most of his ideas while sitting with Ferb in his backyard.
 		</p>
 		<img src="img/wholesome.jpeg">
-		<p>Phineas and his siblings</p>
+		<p class="caption">Phineas and his siblings</p>
 
 		<!-- Characteristics -->
 		<h2>Phineas's Characteristics</h2>
